base/sso/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sso
  template:
    metadata:
      labels:
        app: sso
    spec:
      containers:
        - name: sso
          image: sso
          ports:
            - containerPort: 80
      imagePullPolicy: Always
      imagePullSecrets:
        - name: registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: sso
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: sso
