base/sso/resources/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sso
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`$DOMAIN`)
      kind: Rule
      services:
        - name: sso
          port: 80
#  tls:
#    secretName: sso-cert
